# numerical_calculus

./: CMakeLists.txt  README.md  main.c
ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
